@@ -24,26 +24,18 @@ public class JwtGeneratorUtilTest {
         }
     }
 
-    private String createAccessTokenWithNonce(String nonce) throws Exception {
-        String header = Base64.getUrlEncoder().withoutPadding().encodeToString("{\"alg\":\"HS256\"}".getBytes());
-        String payload = Base64.getUrlEncoder().withoutPadding().encodeToString(("{\"c_nonce\":\"" + nonce + "\"}").getBytes());
-        String signature = Base64.getUrlEncoder().withoutPadding().encodeToString("dummy".getBytes());
-        return header + "." + payload + "." + signature;
-    }
-
     @Test
     public void shouldGenerateJWTForRS256Successfully() throws Exception {
         KeyPairGenerator generator = KeyPairGenerator.getInstance("RSA");
         generator.initialize(2048);
         KeyPair keyPair = generator.generateKeyPair();
-        String accessToken = createAccessTokenWithNonce("nonce-rs256");
         List<Object> expectedClaims = Arrays.asList("client-id", "audience", "nonce-rs256");
 
         String jwt = JwtGeneratorUtil.generateJwtUsingDBKeys(
                 SigningAlgorithm.RS256,
                 "audience",
                 "client-id",
-                accessToken,
+                "nonce-rs256",
                 keyPair.getPublic().getEncoded(),
                 keyPair.getPrivate().getEncoded()
         );
@@ -51,7 +43,7 @@ public class JwtGeneratorUtilTest {
         SignedJWT signedJWT = SignedJWT.parse(jwt);
         List<Object> actualClaims = Arrays.asList(
                 signedJWT.getJWTClaimsSet().getSubject(),
-                signedJWT.getJWTClaimsSet().getAudience().get(0),
+                signedJWT.getJWTClaimsSet().getAudience().getFirst(),
                 signedJWT.getJWTClaimsSet().getStringClaim("nonce")
         );
 
@@ -64,14 +56,13 @@ public class JwtGeneratorUtilTest {
         KeyPairGenerator generator = KeyPairGenerator.getInstance("EC");
         generator.initialize(new ECGenParameterSpec("secp256r1"));
         KeyPair keyPair = generator.generateKeyPair();
-        String accessToken = createAccessTokenWithNonce("nonce-es256");
         List<Object> expectedClaims = Arrays.asList("client-id", "audience", "nonce-es256");
 
         String jwt = JwtGeneratorUtil.generateJwtUsingDBKeys(
                 SigningAlgorithm.ES256,
                 "audience",
                 "client-id",
-                accessToken,
+                "nonce-es256",
                 keyPair.getPublic().getEncoded(),
                 keyPair.getPrivate().getEncoded()
         );
@@ -79,7 +70,7 @@ public class JwtGeneratorUtilTest {
         SignedJWT signedJWT = SignedJWT.parse(jwt);
         List<Object> actualClaims = Arrays.asList(
                 signedJWT.getJWTClaimsSet().getSubject(),
-                signedJWT.getJWTClaimsSet().getAudience().get(0),
+                signedJWT.getJWTClaimsSet().getAudience().getFirst(),
                 signedJWT.getJWTClaimsSet().getStringClaim("nonce")
         );
 
@@ -92,14 +83,13 @@ public class JwtGeneratorUtilTest {
         KeyPairGenerator generator = KeyPairGenerator.getInstance("EC", "BC");
         generator.initialize(new ECGenParameterSpec("secp256k1"));
         KeyPair keyPair = generator.generateKeyPair();
-        String accessToken = createAccessTokenWithNonce("nonce-es256k");
         List<Object> expectedClaims = Arrays.asList("client-id", "audience", "nonce-es256k");
 
         String jwt = JwtGeneratorUtil.generateJwtUsingDBKeys(
                 SigningAlgorithm.ES256K,
                 "audience",
                 "client-id",
-                accessToken,
+                "nonce-es256k",
                 keyPair.getPublic().getEncoded(),
                 keyPair.getPrivate().getEncoded()
         );
@@ -107,7 +97,7 @@ public class JwtGeneratorUtilTest {
         SignedJWT signedJWT = SignedJWT.parse(jwt);
         List<Object> actualClaims = Arrays.asList(
                 signedJWT.getJWTClaimsSet().getSubject(),
-                signedJWT.getJWTClaimsSet().getAudience().get(0),
+                signedJWT.getJWTClaimsSet().getAudience().getFirst(),
                 signedJWT.getJWTClaimsSet().getStringClaim("nonce")
         );
 
@@ -119,14 +109,13 @@ public class JwtGeneratorUtilTest {
     public void shouldGenerateJWTForED25519Successfully() throws Exception {
         KeyPairGenerator generator = KeyPairGenerator.getInstance("Ed25519", "BC");
         KeyPair keyPair = generator.generateKeyPair();
-        String accessToken = createAccessTokenWithNonce("nonce-ed25519");
         List<Object> expectedClaims = Arrays.asList("client-id", "audience", "nonce-ed25519");
 
         String jwt = JwtGeneratorUtil.generateJwtUsingDBKeys(
                 SigningAlgorithm.ED25519,
                 "audience",
                 "client-id",
-                accessToken,
+                "nonce-ed25519",
                 keyPair.getPublic().getEncoded(),
                 keyPair.getPrivate().getEncoded()
         );
@@ -134,7 +123,7 @@ public class JwtGeneratorUtilTest {
         SignedJWT signedJWT = SignedJWT.parse(jwt);
         List<Object> actualClaims = Arrays.asList(
                 signedJWT.getJWTClaimsSet().getSubject(),
-                signedJWT.getJWTClaimsSet().getAudience().get(0),
+                signedJWT.getJWTClaimsSet().getAudience().getFirst(),
                 signedJWT.getJWTClaimsSet().getStringClaim("nonce")
         );
 
@@ -142,21 +131,6 @@ public class JwtGeneratorUtilTest {
         assertEquals(18000, diffInSeconds(signedJWT.getJWTClaimsSet().getIssueTime(), signedJWT.getJWTClaimsSet().getExpirationTime()));
     }
 
-    @Test(expected = Exception.class)
-    public void shouldThrowExceptionIfAccessTokenIsNotInJWTFormat() throws Exception {
-        KeyPairGenerator generator = KeyPairGenerator.getInstance("RSA");
-        generator.initialize(2048);
-        KeyPair keyPair = generator.generateKeyPair();
-
-        JwtGeneratorUtil.generateJwtUsingDBKeys(
-                SigningAlgorithm.RS256,
-                "aud",
-                "client",
-                "invalid-nonce",
-                keyPair.getPublic().getEncoded(),
-                keyPair.getPrivate().getEncoded()
-        );
-    }
 
     public long diffInSeconds(Date issuedAt, Date expiresAt) {
         return (expiresAt.getTime() - issuedAt.getTime()) / 1000;
